--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -477,7 +477,7 @@ Now, we are going to count n, which is the number of $1$s in the middle column a
         \item It is a binary matrix.
         \item There are only two rows contains exactly one 1, and every other rows and columns contain exactly two 1s.
     \end{itemize}
-    The blue square region is a $n\times n$ binary matrix such that 
+    The blue square region is a H-deletion matrix, which is a type-(c),(d),(e) Line-shape.
 
 
 
