--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -525,13 +525,13 @@ Therefore, $\pm 1$ will be the determinant of the theta-curve's H-deletion matri
         $\left(\begin{array}{c|c} Knot & *
         \\ \hline 0 & Line-shape
         \end{array}\right)$
-        , where knot and Line-shape is a $n\time n$ and $k\times k$ matrices. Hence
+        , where knot and Line-shape is a $n\times n$ and $k\times k$ matrices. Hence
         the determinant is det(knot)det(Line-shape) = $0$ or $\pm 2$.
         \item \textbf{Union of T-loop and Line-shape} \\
         We knot that T-loop and Line-shape is independent, which means that there are no 1s in same rows or columns. Therefore, the H-deletion matrix is a form of
         $\left(\begin{array}{c|c} deleted-T-loop & *
         \\ \hline 0 & Line-shape
-        \end{array}\right)$
+        \end{array}\right)$ \\
         hence the determinant is det(deleted-T-loop)det(Line-shape) = $0$ or $\pm 2$.
         \item \textbf{Union of Knot and Line-shape} \\
         Knot and Line-shape is also independent. Therefore, the H-deletion matrix is a form of 
