--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -112,7 +112,10 @@
 		\]
 	\end{cor}
 \end{frame}
-
+\section{Classifying by Determinant}
+\begin{frame}
+	
+\end{frame}
 
 \section{Lower Bounds of Arc Index}
 
