--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -113,8 +113,10 @@
 	\end{cor}
 \end{frame}
 \section{Classifying by Determinant}
-\begin{frame}
-	
+\begin{frame}{Determinant of the cromwell matrices of Knot}
+	\begin{thm}
+		Let $K$ be any knot then its determinant of the cromwell matrix is $0$ or $2$.
+	\end{thm}
 \end{frame}
 
 \section{Lower Bounds of Arc Index}
