--- a/main.ppt/KnSG2024.tex
+++ b/main.ppt/KnSG2024.tex
@@ -8,7 +8,7 @@
 ]{beamer}
 
 \mode<presentation>
-
+\usepackage{kotex}
 \usepackage{babel}
 \usepackage[babel]{microtype}
 \usepackage[babel]{csquotes}
@@ -92,17 +92,19 @@
 \input{setup-plots.tex}
 
 
-\title{Arc Index of a Theta Curve}
-\author{\centerline{\large Yoonsang Lee\inst{1} and Hun Kim\inst{2}}}
-\institute[]{%
-	\inst{1} KAIST, Former Students of KSA of KAIST\\
-	\inst{2} Korea Science Academy of KAIST
+\title{The Determinant and an Arc Index of \\ Theta Curve and Handcuff-Graph}
+\author{\centerline{
+	Eunchan Cho\inst{1} \and
+	Jeongwon Shin\inst{1} \and
+	Boyeon Seo\inst{1} \and
+	Minho Choi\inst{1}}}
+\institute[]{
+	\inst{1} Korea Science Academy of KAIST
 }
 \date{
 	\begin{flushright}
-		NOV 5, 2024\\
-		Knots and Spatial Graphs 2024\\
-		United Arab Emirates University
+		SEP 6, 2025\\
+		학회이름
 	\end{flushright}
 	}
 
