--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -19,7 +19,7 @@
 	\hfill\tiny{Figure from \cite{theta_7}}
 \end{frame}
 
-\begin{frame}{Handcuff-curves}
+\begin{frame}{Handcuff-Graphs}
 	\begin{itemize}
 		\item \term{Handcuff graph} consists of $2$ loops and $1$ edge joining the loops.
 	\end{itemize}
@@ -61,21 +61,12 @@
 \begin{frame}{Grid Diagram}
 	\begin{itemize}
 		\item The \term{grid diagram} is a handcuff graph or theta‐curve diagram of vertical strands and one less number of horizontal strands with the properties that at every crossing the vertical strand crosses over the horizontal strand and no two horizontal segments are co‐linear and no two vertical segments are co‐linear.
-		\item If the 1s of the Cromwell matrix are connected by horizontal and vertical lines with vertical lines are always on the horizontal lines, it leads to the grid diagram. The arc presentation can be expressed by grid diagram and vice versa. They are in one-to-one correspondence. Also, if the number of half planes in arc presentation is $\alpha$, then the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$.
+		\item If the 1s of the Cromwell matrix are connected by horizontal and vertical lines with vertical lines are always on the horizontal lines, it leads to the grid diagram. The arc presentation can be expressed by grid diagram and vice versa. They are in one-to-one correspondence. Also, if the number of half planes in arc presentation is $\alpha$, then the size of corresponding grid diagram is $(\alpha - 1) \s \alpha$.
 	\end{itemize}
 \begin{figure}
     \centerline{\includegraphics[width=0.5\linewidth]{../figs/An_arc_presentation_and_a_grid_diagram_of_the_knot.png}}
 \end{figure}
 \end{frame}
-
-\begin{frame}{Spoke Algorithm}
-	\begin{itemize}
-		\item Gathering all crossings and vertices to one point to obtain a \term{wheel diagram},
-		which is corresponding to an arc presentation.
-	\end{itemize}
-	$$\includegraphics[width=.9\linewidth]{algorithm_spoke.png}$$
-\end{frame}
-
 
 % \begin{frame}{Binding Circle Method}
 % 	Let $D_T$ be a diagram of an $\theta$-curve $T$.
