--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -123,6 +123,7 @@
 	\begin{thm}
 		Let $K$ be any knot then its determinant of the cromwell matrix is $0$ or $2$.
 	\end{thm}
+	\mypf
 \end{frame}
 
 \section{Lower Bounds of Arc Index}
