--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -23,7 +23,12 @@
 	\begin{itemize}
 		\item \term{Handcuff graph} consists of $2$ loops and $1$ edge joining the loops.
 	\end{itemize}
-	%handcuff 사진 넣어야 함
+
+	$$\includegraphics[width=.8\linewidth]{handcufflist.png}$$
+	\seprule
+	\hfill\tiny{Figure from \cite{handcufflist}}
+	% 모리우치 A table of 0-curves and handcuff graphs
+with up to seven crossings
 \end{frame}
 
 \begin{frame}{Reidemaister Moves for $\theta$-Curves}
@@ -61,7 +66,7 @@
 \begin{frame}{Grid Diagram}
 	\begin{itemize}
 		\item The \term{grid diagram} is a handcuff graph or theta‐curve diagram of vertical strands and one less number of horizontal strands with the properties that at every crossing the vertical strand crosses over the horizontal strand and no two horizontal segments are co‐linear and no two vertical segments are co‐linear.
-		\item If the 1s of the Cromwell matrix are connected by horizontal and vertical lines with vertical lines are always on the horizontal lines, it leads to the grid diagram. The arc presentation can be expressed by grid diagram and vice versa. They are in one-to-one correspondence. Also, if the number of half planes in arc presentation is $\alpha$, then the size of corresponding grid diagram is $(\alpha - 1) \s \alpha$.
+		\item If the number of half planes in arc presentation is $\alpha$, then the size of corresponding grid diagram is $(\alpha - 1) \s \alpha$.
 	\end{itemize}
 \begin{figure}
     \centerline{\includegraphics[width=0.5\linewidth]{../figs/An_arc_presentation_and_a_grid_diagram_of_the_knot.png}}
