--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -124,6 +124,19 @@ with up to seven crossings
 	\end{cor}
 \end{frame}
 \section{Classifying by Determinant}
+\begin{frame}{THC-cromwell matrix}
+	\begin{itemize}
+		\item The \term{cromwell matrix} of a knot is an $n \times n$ binary matrix such that each row and column has exactly two $1$s.
+		\item The \term{THC-cromwell matrix} is an expansion of cromwell matrix into $\theta$-curves and handcuff graphs that satisfies the following conditions :
+		\begin{enumerate}
+			\item It is a $(n+1)\times n$ bianry matrix.
+			\item It contains exactly two $1$s in every column.
+			\item There exists two distinct rows which contains exactly three $1$s, which is called the \term{three-row}. Every other row contains exactly two $1$s.
+		\end{enumerate}
+		$$\includegraphics[width=.4\linewidth]{figure/cromwell.png}$$
+	\end{itemize}
+\end{frame}
+
 \begin{frame}{Determinant of the cromwell matrices of Knot}
 	\begin{thm}
 		Let $K$ be any knot then its determinant of the cromwell matrix is $0$ or $2$.
