--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -65,7 +65,7 @@ with up to seven crossings
 
 \begin{frame}{Grid Diagram}
 	\begin{itemize}
-		\item The \term{grid diagram} is a handcuff graph or theta‐curve diagram of vertical strands and one less number of horizontal strands with the properties that at every crossing the vertical strand crosses over the horizontal strand and no two horizontal segments are co‐linear and no two vertical segments are co‐linear.x
+		\item The \term{grid diagram} is a handcuff graph or theta‐curve diagram of vertical strands and one less number of horizontal strands with the properties that at every crossing the vertical strand crosses over the horizontal strand and no two horizontal segments are co‐linear and no two vertical segments are co‐linear.
 	\end{itemize}
 \begin{figure}
     \centerline{\includegraphics[width=0.5\linewidth]{../figs/An_arc_presentation_and_a_grid_diagram_of_the_knot.png}}
