--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -72,29 +72,29 @@ with up to seven crossings
 \end{figure}
 \end{frame}
 
-% \begin{frame}{Binding Circle Method}
-% 	Let $D_T$ be a diagram of an $\theta$-curve $T$.
-% 	A \term{binding circle} of $D_T$ is a simple closed curve $C$ meeting $D_T$
-% 	in $n$ distinct points with the following properties:
-% 	\begin{columns}
-% 		\begin{column}{.7\textwidth}
-% 			\begin{itemize}
-% 				\item $C$ must meet $D_T$ at \term{two vertices}.
-% 				\item $C$ divide $D_T$ into $n$ arcs $\alpha_1$, $\alpha_2$, $\ldots$, $\alpha_n$.
-% 				\item Each $\alpha_i$ has no self-crossings.
-% 				\item If $\alpha_i$ crosses over $\alpha_j$ at a crossing in inside(resp. outside) $C$,
-% 				then $i < j$(resp. $i > j$) and it crosses over $\alpha_i$ at any other crossings with $\alpha_j$, respectively.
-% 				\item For each $i$, there exists an embedded disk $d_i$ such that $\partial d_i = C$ and $\alpha_i \subset d_i$.
-% 				\item $d_i \cap d_j = C$, for distinct $i$ and $j$.
-% 			\end{itemize}
-% 		\end{column}
+\begin{frame}{Binding Circle Method}
+	Let $D_T$ be a diagram of an $\theta$-curve $T$.
+	A \term{binding circle} of $D_T$ is a simple closed curve $C$ meeting $D_T$
+	in $n$ distinct points with the following properties:
+	\begin{columns}
+		\begin{column}{.7\textwidth}
+			\begin{itemize}
+				\item $C$ must meet $D_T$ at \term{two vertices}.
+				\item $C$ divide $D_T$ into $n$ arcs $\alpha_1$, $\alpha_2$, $\ldots$, $\alpha_n$.
+				\item Each $\alpha_i$ has no self-crossings.
+				\item If $\alpha_i$ crosses over $\alpha_j$ at a crossing in inside(resp. outside) $C$,
+				then $i < j$(resp. $i > j$) and it crosses over $\alpha_i$ at any other crossings with $\alpha_j$, respectively.
+				\item For each $i$, there exists an embedded disk $d_i$ such that $\partial d_i = C$ and $\alpha_i \subset d_i$.
+				\item $d_i \cap d_j = C$, for distinct $i$ and $j$.
+			\end{itemize}
+		\end{column}
 
-% 		\begin{column}{.3\textwidth}
-% 			$$\includegraphics[width=.95\linewidth]{algorithm_binding.png}$$			
-% 		\end{column}
-% 	\end{columns}
-% 	Then the pair $(D_T, C)$ is also corresponding to an arc presentation.
-% \end{frame}
+		\begin{column}{.3\textwidth}
+			$$\includegraphics[width=.95\linewidth]{algorithm_binding.png}$$			
+		\end{column}
+	\end{columns}
+	Then the pair $(D_T, C)$ is also corresponding to an arc presentation.
+\end{frame}
 
 
 \begin{frame}{Binding Circle Method}
