--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -31,7 +31,7 @@
 with up to seven crossings
 \end{frame}
 
-\begin{frame}{Reidemaister Moves for $\theta$-Curves}
+\begin{frame}{Reidemaister Moves for $\theta$-Curves and Handcuff Graphs}
 	\medskip
 	\begin{enumerate}
 		\item[\mybf{I.}] \quad\raisebox{-15pt}{\includegraphics[width=36pt,height=36pt]{y101}} \quad $\longleftrightarrow$ \quad \raisebox{-15pt}{\includegraphics[width=36pt,height=36pt]{y103}} \quad $\longleftrightarrow$ \quad \raisebox{-15pt}{\includegraphics[width=36pt,height=36pt]{y102}}\medskip
@@ -140,6 +140,8 @@ with up to seven crossings
 	\begin{thm}
 		Let $K$ be any knot then its determinant of the cromwell matrix is $0$ or $2$.
 	\end{thm}
+	\mypf
+
 \end{frame}
 
 \section{Lower Bounds of Arc Index}
@@ -153,6 +155,7 @@ with up to seven crossings
 			\alpha(T) \ge \max_{i\in\{1,2,3\}} \alpha(K_i) + 1
 		\]
 	\end{thm}
+	
 
 	\mypf
 
