--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -27,8 +27,7 @@
 	$$\includegraphics[width=.8\linewidth]{handcufflist.png}$$
 	\seprule
 	\hfill\tiny{Figure from \cite{handcufflist}}
-	% 모리우치 A table of 0-curves and handcuff graphs
-with up to seven crossings
+	% 모리우치 A table of 0-curves and handcuff graphs with up to seven crossings
 \end{frame}
 
 \begin{frame}{Reidemaister Moves for $\theta$-Curves}
@@ -101,6 +100,10 @@ with up to seven crossings
 	\begin{tabu}{X[5c]X[c]X[5c]X[c]X[5c]}
 		\includegraphics[width=.95\linewidth]{theta52c.png} & \raisebox{1.5cm}{$\longrightarrow$} & \includegraphics[width=.95\linewidth]{algorithm_binding.png} & \raisebox{1.5cm}{$\longleftrightarrow$} & \includegraphics[width=.95\linewidth]{openbook.png}
 	\end{tabu}
+\end{frame}
+
+\begin{frame}{Arc Index of Spatial Graphs}
+	$$\includegraphics[height=0.8\textheight]{../figure/arcindexfigure.jpg}$$
 \end{frame}
 
 
@@ -588,10 +591,6 @@ with up to seven crossings
 
 \begin{frame}{Bounds of Arc Index}
 	\includegraphics[width=\linewidth]{graph.png}
-\end{frame}
-
-\begin{frame}{Arc Index of Some $\theta$-Curves}
-	$$\includegraphics[height=\textheight]{further.jpeg}$$
 \end{frame}
 
 
