--- a/main.ppt/woobo.sty
+++ b/main.ppt/woobo.sty
@@ -45,7 +45,7 @@
 \def\cellyellow{\cellcolor{lightgoldenrodyellow!25}}
 \def\cellblue{\cellcolor{lightsteelblue!20}}
 \def\cellhite{\cellcolor{antiquewhite!20}}
-
+\usepackage{xcolor}
 %----------------------------------------------------------------------------------------
 %	Intro
 %----------------------------------------------------------------------------------------
