--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -64,10 +64,11 @@
 
 \begin{frame}{Grid Diagram}
 	\begin{itemize}
-		\item The \term{grid diagram} is a handcuff graph or theta‐curve diagram of vertical strands and one less number of horizontal strands with the properties that at every crossing the vertical strand crosses over the horizontal strand and no two horizontal segments are co‐linear and no two vertical segments are co‐linear.
+		\item The \term{grid diagram} is a handcuff graph or theta‐curve diagram of vertical strands and one less number of horizontal strands.
+		\item At every crossing the vertical strand crosses over the horizontal strand and no two horizontal segments are co‐linear and no two vertical segments are co‐linear.
 	\end{itemize}
 \begin{figure}
-    \centerline{\includegraphics[width=0.5\linewidth]{../figs/An_arc_presentation_and_a_grid_diagram_of_the_knot.png}}
+    \centerline{\includegraphics[width=0.75\linewidth]{../figs/An_arc_presentation_and_a_grid_diagram_of_the_knot.png}}
 \end{figure}
 \end{frame}
 
@@ -103,7 +104,6 @@
 \end{frame}
 
 \begin{frame}{Arc Presentation of the Theta-Curve and Handcuff Graph}
-	\mypf
 	For each crossings, if it is a first case, then it is over.
     However, if it is a second case, then we can make that crossing to first case using some suitable movement.
     \begin{figure}
@@ -149,24 +149,25 @@
 \end{frame}
 
 
-\begin{frame}{Upper Bound of Arc Index}
+% \begin{frame}{Upper Bound of Arc Index}
 
-	\begin{thm}[\cite{arc_spacial}]
-		Let $G$ be any spatial graph with $e$ edges and $b$ bouquet cut components.
-		Then
-		\[
-			\alpha(G) \le c(G) + e + b
-		\]
-	\end{thm}
+% 	\begin{thm}[\cite{arc_spacial}]
+% 		Let $G$ be any spatial graph with $e$ edges and $b$ bouquet cut components.
+% 		Then
+% 		\[
+% 			\alpha(G) \le c(G) + e + b
+% 		\]
+% 	\end{thm}
 
-	\begin{cor}
-		Let $T$ be any $\theta$-curve.
-		Then
-		\[
-			\alpha(T) \le c(T) + 3
-		\]
-	\end{cor}
-\end{frame}
+% 	\begin{cor}
+% 		Let $T$ be any $\theta$-curve.
+% 		Then
+% 		\[
+% 			\alpha(T) \le c(T) + 3
+% 		\]
+% 	\end{cor}
+% \end{frame}
+
 \section{Classifying by Determinant}
 \begin{frame}{THC-cromwell matrix}
 	\begin{itemize}
